center canvas on page

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <meta http-equiv="cleartype" content="on" />
     <style>
       html,
-      body,
-      canvas {
-        margin: 0 !important;
-        padding: 0 !important;
-        overflow: hidden !important;
+      body {
+        margin: 0;
+      }
+      body {
+        background: black;
       }
     </style>
   </head>
   <body>
-    <div id="content"></div>
+    <div id="phaser-game"></div>
     <script src="vendors.app.bundle.js"></script>
     <script src="app.bundle.js"></script>
   </body>
